<resources>
    <string name="app_name">PetrolApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_record_fill_up">RecordFillUpActivity</string>
    <string name="odometerFieldText">Enter Odometer Value</string>
    <string name="volumeFieldText">Enter Volume</string>
    <string name="priceFieldText">Enter Price</string>
    <string name="fullTankBool">Tank is Full</string>
    <string name="attachReceiptLabel">Attach Receipt?</string>
    <string name="cancelText">Cancel</string>
    <string name="submitText">Submit</string>
</resources>
